--- a/src/component/add-message/AddMessage.css
+++ b/src/component/add-message/AddMessage.css
@@ -1,4 +1,19 @@
 .add-message {
-    border-top: 2px solid #000;
-    padding: 10px 15px;
+    border-top: 2px solid #179cde;
+    padding: 6px 15px 4px 15px;
+    background-color: #fff;
+}
+
+.add-message-input {
+    width: calc(100% - 20px);
+    border-radius: 0;
+    border: 0;
+    height: 30px;
+    color: #000;
+    font-size: 1rem;
+    font-weight: 300;
+    padding: 5px 10px;
+}
+.add-message-input:focus {
+    outline: none;
 }
