--- a/src/component/sidebar/Sidebar.css
+++ b/src/component/sidebar/Sidebar.css
@@ -1,9 +1,26 @@
 .sidebar {
-    min-width: 400px;
-    border-right: 2px solid #000;
+    min-width: 350px;
+    border-right: 2px solid #179cde;
+    padding: 15px 10px;
 }
 
 .sidebar-subtitle {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0 0 16px 0;
+    font-weight: 400;
+}
+
+.sidebar-active-users-list {
+    list-style: none;
+    padding: 0;
+    margin: 0 -10px;
+    border-top: 1px solid #179cde;
+}
+.sidebar-active-users-list li {
+    border-bottom: 1px solid #fff;
+    padding: 15px 10px;
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #fff;
+    background-color: #179cde;
 }
